tests/ui/operator-recovery/less-than-greater-than.stderr
error: invalid comparison operator `<>`
  --> $DIR/less-than-greater-than.rs:2:22
   |
LL |     println!("{}", 1 <> 2);
   |                      ^^ help: `<>` is not a valid comparison operator, use `!=`

error: aborting due to previous error

