tests/ui/operator-recovery/less-than-greater-than.rs
fn main() {
    println!("{}", 1 <> 2);
    //~^ERROR invalid comparison operator `<>`
}
